@@ -1,82 +1,74 @@
 package com.rtsbuilding.rtsbuilding.server.service;
 
-import com.mojang.brigadier.Command;
-import com.mojang.brigadier.arguments.StringArgumentType;
-import com.rtsbuilding.rtsbuilding.RtsbuildingMod;
 import com.rtsbuilding.rtsbuilding.common.diagnostics.RtsAsyncJsonlWriter;
 import com.rtsbuilding.rtsbuilding.server.task.TaskType;
-import net.minecraft.commands.Commands;
-import net.minecraft.network.chat.Component;
-import net.minecraft.server.level.ServerPlayer;
-import net.neoforged.bus.api.SubscribeEvent;
-import net.neoforged.fml.common.EventBusSubscriber;
-import net.neoforged.neoforge.event.RegisterCommandsEvent;
+import net.minecraft.command.CommandBase;
+import net.minecraft.command.CommandException;
+import net.minecraft.command.ICommandSender;
+import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraft.server.MinecraftServer;
+import net.minecraft.util.text.TextComponentTranslation;
 
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.Locale;
 
 /** OP 开发者场景的服务端采样边界；只读状态并异步写出 JSONL。 */
-@EventBusSubscriber(modid = RtsbuildingMod.MODID)
-public final class RtsDeveloperScenarioCommand {
-    private RtsDeveloperScenarioCommand() {
+public final class RtsDeveloperScenarioCommand extends CommandBase {
+    public RtsDeveloperScenarioCommand() {
     }
 
-    @SubscribeEvent
-    public static void register(RegisterCommandsEvent event) {
-        event.getDispatcher().register(Commands.literal("rtsbuilding_dev")
-                .then(Commands.argument("action", StringArgumentType.word())
-                        .then(Commands.argument("task", StringArgumentType.word())
-                                .then(Commands.argument("runId", StringArgumentType.word())
-                                        .executes(context -> checkpoint(
-                                                context.getSource().getPlayerOrException(),
-                                                StringArgumentType.getString(context, "action"),
-                                                StringArgumentType.getString(context, "task"),
-                                                StringArgumentType.getString(context, "runId")))))));
+    @Override public String getName() { return "rtsbuilding_dev"; }
+    @Override public String getUsage(ICommandSender sender) { return "/rtsbuilding_dev <start|finish> <task> <runId>"; }
+    @Override public int getRequiredPermissionLevel() { return 2; }
+
+    @Override
+    public void execute(MinecraftServer server, ICommandSender sender, String[] args) throws CommandException {
+        if (args.length != 3) throw new CommandException(getUsage(sender));
+        checkpoint(getCommandSenderAsPlayer(sender), args[0], args[1], args[2]);
     }
 
-    private static int checkpoint(ServerPlayer player, String action, String task, String runId) {
+    private static void checkpoint(EntityPlayerMP player, String action, String task, String runId) {
         String safeAction = trim(action, 16);
         String safeTask = trim(task, 48);
         String safeRunId = trim(runId, 64);
-        if (!player.hasPermissions(2)) {
-            player.sendSystemMessage(Component.translatable(
+        if (!player.canUseCommand(2, "rtsbuilding_dev")) {
+            player.sendMessage(new TextComponentTranslation(
                     "message.rtsbuilding.developer.server_metrics_requires_op"));
-            return 0;
+            return;
         }
         if ("start".equals(safeAction)) {
             if (!RtsDeveloperMetrics.begin(player, safeRunId, safeTask)) {
-                player.sendSystemMessage(Component.translatable(
+                player.sendMessage(new TextComponentTranslation(
                         "message.rtsbuilding.developer.run_mismatch"));
-                return 0;
+                return;
             }
             write(player, safeAction, safeTask, safeRunId, null);
         } else if ("finish".equals(safeAction)) {
-            var finish = RtsDeveloperMetrics.finish(player, safeRunId, safeTask);
+            RtsDeveloperMetrics.FinishResult finish = RtsDeveloperMetrics.finish(player, safeRunId, safeTask);
             if (!finish.accepted()) {
-                player.sendSystemMessage(Component.translatable(
+                player.sendMessage(new TextComponentTranslation(
                         "message.rtsbuilding.developer.run_mismatch"));
-                return 0;
+                return;
             }
             write(player, safeAction, safeTask, safeRunId, finish.snapshot());
         } else {
-            return 0;
+            return;
         }
-        player.sendSystemMessage(Component.translatable(
+        player.sendMessage(new TextComponentTranslation(
                 "message.rtsbuilding.developer.checkpoint_saved", safeRunId));
-        return Command.SINGLE_SUCCESS;
     }
 
-    private static void write(ServerPlayer player, String action, String task, String runId,
+    private static void write(EntityPlayerMP player, String action, String task, String runId,
             RtsDeveloperMetrics.Snapshot metrics) {
         StringBuilder line = new StringBuilder(1024)
                 .append("{\"time\":\"").append(escape(Instant.now().toString()))
                 .append("\",\"runId\":\"").append(escape(runId))
                 .append("\",\"task\":\"").append(escape(task))
                 .append("\",\"action\":\"").append(escape(action))
-                .append("\",\"player\":\"").append(player.getUUID())
+                .append("\",\"player\":\"").append(player.getUniqueID())
                 .append("\",\"dimension\":\"")
-                .append(escape(player.level().dimension().location().toString())).append('"');
+                .append(player.dimension).append('"');
         if (metrics != null) {
             line.append(",\"taskTickAverageNanos\":").append(metrics.averageTickNanos())
                     .append(",\"taskTickMaxNanos\":").append(metrics.maxTickNanos())
@@ -116,7 +108,7 @@ public final class RtsDeveloperScenarioCommand {
         }
         line.append("}\n");
         RtsAsyncJsonlWriter.append(
-                Path.of("logs", "rtsbuilding-dev", "server-scenarios.jsonl"), line.toString());
+                Paths.get("logs", "rtsbuilding-dev", "server-scenarios.jsonl"), line.toString());
     }
 
     private static String trim(String value, int maxLength) {
